<?xml version="1.0"?>
<package format="2">
  <name>c1t_razor_imu_m0_driver</name>
  <version>0.0.0</version>
  <description>The c1t_razor_imu_m0_driver package</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <author>Adam Morrissett</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cav_driver_utils</depend>
  <depend>cav_msgs</depend>
  <depend>razor_imu_m0_driver</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
